# TermRad

./: .gitignore  LICENSE  README.md  TermRad.py  TermRadStyles.tcss  api_tests.py  mich.txt  pyproject.toml  radar_animator.py  requirements.txt  weather_api.py
src/TermRad/: TermRadStyles.tcss  app.py  radar_animator.py  weather_api.py
src/TermRad/assets/: logo.txt  mich.txt
tests/: tests.py
