[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TermRad"
version = "2.0"
description = "A professional terminal-based weather radar and forecasting dashboard"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual",
    "rich",
    "pillow",
    "requests"
]

[project.scripts]
termrad = "TermRad.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
TermRad = ["*.tcss", "assets/*.txt"]
